@@ -85,40 +85,35 @@ class EntryServiceTest {
         when(reportRepository.findByStoreAndReportDate(testStore, testDate)).thenReturn(Optional.of(testReport));
         when(reportRepository.save(any(DailyStoreReport.class))).thenReturn(testReport);
 
-
         when(movementRepository.findByReport(testReport)).thenReturn(List.of());
-
-
         when(stockRepository.findByStoreAndProduct(testStore, testProduct)).thenReturn(Optional.empty());
 
-
+        // WHEN: Sada prosleđujemo i praznu listu za povrate (5. lista)
         entryService.saveDailyReport(
                 1L, testDate, null, "Prvi unos",
                 List.of(1L),
-                List.of(BigDecimal.TEN),
-                List.of(),
-                List.of()
+                List.of(BigDecimal.TEN), // Received
+                List.of(),               // Sold
+                List.of(),               // Waste
+                List.of()                // Returns - NOVO!
         );
 
-
+        // THEN: Pošto smo poslali samo Purchase (10), snima se 1 movement
         verify(movementRepository, times(1)).save(movementCaptor.capture());
         assertEquals(BigDecimal.TEN, movementCaptor.getValue().getQuantity());
         assertEquals(MovementType.PURCHASE, movementCaptor.getValue().getType());
-
 
         verify(stockRepository, times(1)).save(stockCaptor.capture());
         assertEquals(BigDecimal.TEN, stockCaptor.getValue().getQuantity());
     }
 
-
     @Test
     void testSaveDailyReport_UpdateExistingMovements() {
-
+        // GIVEN
         when(storeService.getById(1L)).thenReturn(testStore);
         when(productService.getById(1L)).thenReturn(testProduct);
         when(reportRepository.findByStoreAndReportDate(testStore, testDate)).thenReturn(Optional.of(testReport));
         when(reportRepository.save(any(DailyStoreReport.class))).thenReturn(testReport);
-
 
         StockMovement existingMovement = new StockMovement();
         existingMovement.setProduct(testProduct);
@@ -128,7 +123,6 @@ class EntryServiceTest {
 
         when(movementRepository.findByReport(testReport)).thenReturn(List.of(existingMovement));
 
-
         ProductStock currentStock = new ProductStock();
         currentStock.setId(1L);
         currentStock.setStore(testStore);
@@ -137,14 +131,17 @@ class EntryServiceTest {
 
         when(stockRepository.findByStoreAndProduct(testStore, testProduct)).thenReturn(Optional.of(currentStock));
 
+        // WHEN: Sada prosleđujemo i listu za povrat (5. lista)
         entryService.saveDailyReport(
                 1L, testDate, null, "Prepravka",
                 List.of(1L),
-                List.of(new BigDecimal("15")), // NOVO STANJE
-                List.of(), List.of()
+                List.of(new BigDecimal("15")), // NOVO STANJE Nabavke
+                List.of(),
+                List.of(),
+                List.of() // Returns - NOVO!
         );
 
-
+        // THEN
         assertEquals(new BigDecimal("15"), existingMovement.getQuantity());
         verify(movementRepository, times(1)).save(existingMovement);
 
@@ -154,21 +151,24 @@ class EntryServiceTest {
 
     @Test
     void testFinalizeDay() {
-
+        // GIVEN
         when(storeService.getById(1L)).thenReturn(testStore);
         when(reportRepository.findByStoreAndReportDate(testStore, testDate)).thenReturn(Optional.of(testReport));
         when(productService.getAllActive()).thenReturn(List.of(testProduct));
 
-
         when(movementRepository.findByReport(testReport)).thenReturn(List.of());
 
-
+        // WHEN
         entryService.finalizeDay(1L, testDate);
 
-        verify(movementRepository, times(3)).save(movementCaptor.capture());
+        // THEN: Sada očekujemo 4 poziva jer imamo Nabavku, Prodaju, Otpis i POVRAT (sve po 0)
+        verify(movementRepository, times(4)).save(movementCaptor.capture());
         List<StockMovement> savedMovements = movementCaptor.getAllValues();
 
-        assertEquals(BigDecimal.ZERO, savedMovements.getFirst().getQuantity());
-        assertEquals(MovementType.PURCHASE, savedMovements.getFirst().getType());
+        assertEquals(BigDecimal.ZERO, savedMovements.get(0).getQuantity());
+        assertEquals(MovementType.PURCHASE, savedMovements.get(0).getType());
+
+        // Provera da li se dodaje i Return (koji je četvrti u petlji)
+        assertEquals(MovementType.RETURN, savedMovements.get(3).getType());
     }
 }
